# Kanchha

./: .gitignore  plan.md  pyproject.toml
actions/: alarms.py  apps.py  device_commands.py  weather.py
core/: bus.py  events.py
input/: stt.py
nlu/: schemas.py
output/: tts.py
protoypes/: prototype.py  tts_elevenlabs.py  tts_final_prototype.py
reasoning/: llm_client.py  llm_client_mulapi.py
